# kernel-editor

./: CMakeLists.txt  README.md
src/: battery.cpp  battery.hpp  cpu.cpp  cpu.hpp  io.cpp  io.hpp  main.cpp  storage.cpp  storage.hpp  utils.cpp  utils.hpp  vmem.cpp  vmem.hpp
src/api/: battery.cpp  battery.hpp  cpu.cpp  cpu.hpp  storage.cpp  storage.hpp
src/tabs/: base.hpp  cpu.cpp  cpu.hpp
